@@ -8,9 +8,9 @@ import static seedu.address.testutil.Assert.assertThrows;
 import static seedu.address.testutil.TypicalIndexes.INDEX_FIRST;
 
 import java.util.Arrays;
+import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.Test;
 
@@ -32,6 +32,7 @@ import seedu.address.logic.commands.findcommand.FindEmailCommand;
 import seedu.address.logic.commands.findcommand.FindNameCommand;
 import seedu.address.logic.commands.findcommand.FindPhoneCommand;
 import seedu.address.logic.commands.findcommand.FindTagCommand;
+import seedu.address.logic.commands.findcommand.FindTaskCommand;
 import seedu.address.logic.commands.findcommand.FindWeddingCommand;
 import seedu.address.logic.commands.task.CreateTaskCommand;
 import seedu.address.logic.commands.task.DeleteTaskCommand;
@@ -53,6 +54,7 @@ import seedu.address.model.person.keywordspredicate.EmailContainsKeywordsPredica
 import seedu.address.model.person.keywordspredicate.NameContainsKeywordsPredicate;
 import seedu.address.model.person.keywordspredicate.PhoneContainsKeywordsPredicate;
 import seedu.address.model.person.keywordspredicate.TagContainsKeywordsPredicate;
+import seedu.address.model.person.keywordspredicate.TaskContainsKeywordsPredicate;
 import seedu.address.model.person.keywordspredicate.WeddingContainsKeywordsPredicate;
 import seedu.address.model.tag.Tag;
 import seedu.address.model.tag.TagName;
@@ -107,50 +109,106 @@ public class AddressBookParserTest {
 
     @Test
     public void parseCommand_findName() throws Exception {
-        List<String> keywords = Arrays.asList("foo", "bar", "baz");
+        List<String> keywords = Arrays.asList("foo");
         FindNameCommand command = (FindNameCommand) parser.parseCommand(
-                FindCommand.COMMAND_WORD + " n/" + keywords.stream().collect(Collectors.joining(" ")));
+                FindCommand.COMMAND_WORD + " n/ foo");
+        assertEquals(new FindNameCommand(new NameContainsKeywordsPredicate(keywords)), command);
+    }
+
+    @Test
+    public void parseCommand_findMultipleName() throws Exception {
+        List<String> keywords = Arrays.asList("Amy", "Bob", "Clarissa");
+        FindNameCommand command = (FindNameCommand) parser.parseCommand(
+                FindCommand.COMMAND_WORD + " n/Amy n/Bob n/Clarissa");
         assertEquals(new FindNameCommand(new NameContainsKeywordsPredicate(keywords)), command);
     }
 
     @Test
     public void parseCommand_findAddress() throws Exception {
-        List<String> keywords = Arrays.asList("Jurong West Street");
+        List<String> keywords = List.of("Jurong West Street");
         FindAddressCommand command = (FindAddressCommand) parser.parseCommand(
-                FindCommand.COMMAND_WORD + " a/" + keywords.stream().collect(Collectors.joining(" ")));
+                FindCommand.COMMAND_WORD + " a/Jurong West Street");
+        assertEquals(new FindAddressCommand(new AddressContainsKeywordsPredicate(keywords)), command);
+    }
+
+    @Test
+    public void parseCommand_findMultipleAddress() throws Exception {
+        List<String> keywords = Arrays.asList("Jurong West Street", "Tampines East");
+        FindAddressCommand command = (FindAddressCommand) parser.parseCommand(
+                FindCommand.COMMAND_WORD + " a/Jurong West Street a/Tampines East");
         assertEquals(new FindAddressCommand(new AddressContainsKeywordsPredicate(keywords)), command);
     }
 
     @Test
     public void parseCommand_findEmail() throws Exception {
+        List<String> keywords = Arrays.asList("sally@gmail.com");
+        FindEmailCommand command = (FindEmailCommand) parser.parseCommand(
+                FindCommand.COMMAND_WORD + " e/sally@gmail.com");
+        assertEquals(new FindEmailCommand(new EmailContainsKeywordsPredicate(keywords)), command);
+    }
+
+    @Test
+    public void parseCommand_findMultipleEmails() throws Exception {
         List<String> keywords = Arrays.asList("sally@gmail.com", "bob@example.com");
         FindEmailCommand command = (FindEmailCommand) parser.parseCommand(
-                FindCommand.COMMAND_WORD + " e/" + keywords.stream().collect(Collectors.joining(" ")));
+                FindCommand.COMMAND_WORD + " e/sally@gmail.com e/bob@example.com");
         assertEquals(new FindEmailCommand(new EmailContainsKeywordsPredicate(keywords)), command);
     }
 
     @Test
     public void parseCommand_findPhone() throws Exception {
-        List<String> keywords = Arrays.asList("99394835");
+        List<String> keywords = List.of("99394835");
         FindPhoneCommand command = (FindPhoneCommand) parser.parseCommand(
-                FindCommand.COMMAND_WORD + " p/" + keywords.stream().collect(Collectors.joining(" ")));
+                FindCommand.COMMAND_WORD + " p/99394835");
+        assertEquals(new FindPhoneCommand(new PhoneContainsKeywordsPredicate(keywords)), command);
+    }
+
+    @Test
+    public void parseCommand_findMultiplePhone() throws Exception {
+        List<String> keywords = Arrays.asList("99394835", "283384");
+        FindPhoneCommand command = (FindPhoneCommand) parser.parseCommand(
+                FindCommand.COMMAND_WORD + " p/99394835 p/283384");
         assertEquals(new FindPhoneCommand(new PhoneContainsKeywordsPredicate(keywords)), command);
     }
 
     @Test
     public void parseCommand_findTag() throws Exception {
-        List<String> keywords = Arrays.asList("florist");
+        List<String> keywords = List.of("florist");
         FindTagCommand command = (FindTagCommand) parser.parseCommand(
-                FindCommand.COMMAND_WORD + " t/" + keywords.stream().collect(Collectors.joining(" ")));
+                FindCommand.COMMAND_WORD + " t/florist");
+        assertEquals(new FindTagCommand(new TagContainsKeywordsPredicate(keywords)), command);
+    }
+
+    @Test
+    public void parseCommand_findMultipleTags() throws Exception {
+        List<String> keywords = Arrays.asList("florist", "photographer");
+        FindTagCommand command = (FindTagCommand) parser.parseCommand(
+                FindCommand.COMMAND_WORD + " t/florist t/photographer");
         assertEquals(new FindTagCommand(new TagContainsKeywordsPredicate(keywords)), command);
     }
 
     @Test
     public void parseCommand_findWedding() throws Exception {
-        List<String> keywords = Arrays.asList("Snoopy's", "wedding");
+        List<String> keywords = Arrays.asList("Snoopy's wedding");
         FindWeddingCommand command = (FindWeddingCommand) parser.parseCommand(
-                FindCommand.COMMAND_WORD + " w/" + keywords.stream().collect(Collectors.joining(" ")));
+                FindCommand.COMMAND_WORD + " w/ Snoopy's wedding");
         assertEquals(new FindWeddingCommand(new WeddingContainsKeywordsPredicate(keywords)), command);
+    }
+
+    @Test
+    public void parseCommand_findMultipleWeddings() throws Exception {
+        List<String> keywords = Arrays.asList("Snoopy's wedding", "Wedding 2029");
+        FindWeddingCommand command = (FindWeddingCommand) parser.parseCommand(
+                FindCommand.COMMAND_WORD + " w/Snoopy's wedding w/Wedding 2029");
+        assertEquals(new FindWeddingCommand(new WeddingContainsKeywordsPredicate(keywords)), command);
+    }
+
+    @Test
+    public void parseCommand_findTask() throws Exception {
+        List<String> keywords = Arrays.asList("Order wedding cake");
+        FindTaskCommand command = (FindTaskCommand) parser.parseCommand(
+                FindCommand.COMMAND_WORD + " tk/Order wedding cake");
+        assertEquals(new FindTaskCommand(new TaskContainsKeywordsPredicate(keywords)), command);
     }
 
     @Test
@@ -244,11 +302,13 @@ public class AddressBookParserTest {
 
     @Test
     public void parseCommand_assignWedding() throws Exception {
-        HashSet<Wedding> weddingsToAdd = new HashSet<>(Arrays.asList(new Wedding(new WeddingName("Wedding 19")),
-                new Wedding(new WeddingName("Joe's Wedding"))));
+        HashMap<Wedding, String> weddingsToAdd = new HashMap<>() {
+            { put(new Wedding(new WeddingName("Wedding 19")), "g"); }
+            { put(new Wedding(new WeddingName("Joe's Wedding")), "g"); }
+        };
         String userInput = AssignWeddingCommand.COMMAND_WORD + " " + INDEX_FIRST.getOneBased()
                 + " w/Wedding 19 w/Joe's Wedding";
-        AssignWeddingCommand expectedCommand = new AssignWeddingCommand(INDEX_FIRST, weddingsToAdd);
+        AssignWeddingCommand expectedCommand = new AssignWeddingCommand(INDEX_FIRST, weddingsToAdd, false);
 
         AssignWeddingCommand command = (AssignWeddingCommand) parser.parseCommand(userInput);
         assertEquals(expectedCommand, command);
